--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
   },
   "homepage": "https://github.com/MohamedAhmed122/E-commerce-MERN-Native#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "color.js": "^1.2.0",
+    "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.11.10",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.6"
   }
 }
