--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "body-parser": "^1.19.0",
     "color.js": "^1.2.0",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "mongoose": "^5.11.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6"
