--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/MohamedAhmed122/E-commerce-MERN-Native#readme",
   "dependencies": {
+    "@react-navigation/native": "^5.9.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "color.js": "^1.2.0",
